force-app/main/default/objects/DisclosureInventor__c/DisclosureInventor__c.object-meta.xml
<CustomObject>
    <label>Disclosure Inventor</label>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Disclosure Inventor Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disclosure Inventors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>