force-app/main/default/objects/DisclosureInventor__c/fields/Active_Kerb__c.field-meta.xml
<CustomField>
    <fullName>Active_Kerb__c</fullName>
    <formula>Contact__r.PersonContact.ActiveKerb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Kerb?</label>
    <type>Checkbox</type>
</CustomField>