force-app/main/default/objects/DisclosureInventor__c/fields/AdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>AdditionalComments__c</fullName>
    <label>11. Additional Comments</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>