force-app/main/default/objects/DisclosureInventor__c/fields/AdditionalSponsorsOrFunding__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSponsorsOrFunding__c</fullName>
    <label>8. Addtl.  SRAs or funding sources?</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>