force-app/main/default/objects/DisclosureInventor__c/fields/AffiliatedWithOrgsDlcs__c.field-meta.xml
<CustomField>
    <fullName>AffiliatedWithOrgsDlcs__c</fullName>
    <label>7. Affiliations?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wyss</fullName>
                <label>Wyss Institute</label>
            </value>
            <value>
                <fullName>Whitehead</fullName>
            </value>
            <value>
                <fullName>Broad</fullName>
                <label>Broad Institute</label>
            </value>
            <value>
                <fullName>SMART</fullName>
                <label>Singapore MIT Alliance for Research and Technology</label>
            </value>
            <value>
                <fullName>IMES</fullName>
                <label>Institute for Medical Engineering and Sciences</label>
            </value>
            <value>
                <fullName>Ragon</fullName>
                <label>Ragon Institute</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>