force-app/main/default/objects/DisclosureInventor__c/fields/Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Collaboration__c</fullName>
    <label>4. Research part of a collaboration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>