force-app/main/default/objects/DisclosureInventor__c/fields/CollaborationDetails__c.field-meta.xml
<CustomField>
    <fullName>CollaborationDetails__c</fullName>
    <label>4a. Collab. details</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>