force-app/main/default/objects/DisclosureInventor__c/fields/ConsultantOrContract__c.field-meta.xml
<CustomField>
    <fullName>ConsultantOrContract__c</fullName>
    <label>5. Research done by consultant/CRO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>