force-app/main/default/objects/DisclosureInventor__c/fields/ConsultantOrContractDetails__c.field-meta.xml
<CustomField>
    <fullName>ConsultantOrContractDetails__c</fullName>
    <label>5a. Consultant/CRO details</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>