force-app/main/default/objects/DisclosureInventor__c/fields/Current_date_of_Tenure_from__c.field-meta.xml
<CustomField>
    <fullName>Current_date_of_Tenure_from__c</fullName>
    <formula>Contact__r.HHMI_Current_Date_From__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current date of Tenure (from)</label>
    <type>Date</type>
</CustomField>