force-app/main/default/objects/DisclosureInventor__c/fields/Currently_affiliated_with_HHMI__c.field-meta.xml
<CustomField>
    <fullName>Currently_affiliated_with_HHMI__c</fullName>
    <formula>Contact__r.HHMI_Current__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currently affiliated with HHMI</label>
    <type>Checkbox</type>
</CustomField>