force-app/main/default/objects/DisclosureInventor__c/fields/Dates_of_tenure__c.field-meta.xml
<CustomField>
    <fullName>Dates_of_tenure__c</fullName>
    <formula>TEXT(MONTH(HHMI_tenure_date_from__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(HHMI_tenure_date_from__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(HHMI_tenure_date_from__c)) &amp; &quot; - &quot; &amp; TEXT(MONTH(HHMI_tenure_date_to__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(HHMI_tenure_date_to__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(HHMI_tenure_date_to__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dates of tenure</label>
    <type>Text</type>
</CustomField>