force-app/main/default/objects/DisclosureInventor__c/fields/Department_Institution__c.field-meta.xml
<CustomField>
    <fullName>Department_Institution__c</fullName>
    <formula>Contact__r.PersonDepartment &amp; IF(NOT( ISBLANK(Contact__r.PersonDepartment) ) &amp;&amp; NOT( ISBLANK( Contact__r.Institution__pc) ), &quot;/&quot;, &quot;&quot;) &amp; Contact__r.Institution__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department/Institution</label>
    <type>Text</type>
</CustomField>