force-app/main/default/objects/DisclosureInventor__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure ID</label>
    <referenceTo>Disclosure__c</referenceTo>
    <relationshipLabel>Disclosure Inventors</relationshipLabel>
    <relationshipName>Inventors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>