force-app/main/default/objects/DisclosureInventor__c/fields/Disclosure_Title__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Title__c</fullName>
    <formula>Disclosure__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclosure Title</label>
    <type>Text</type>
</CustomField>