force-app/main/default/objects/DisclosureInventor__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.MiddleName &amp; &quot; &quot; &amp; Contact__r.LastName &amp;  &quot; - &quot; &amp; Disclosure__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display_Name</label>
    <type>Text</type>
</CustomField>