force-app/main/default/objects/DisclosureInventor__c/fields/DocuSign_Recipient_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Recipient_StatusCode__c</fullName>
    <description>This field will hold the value of DocuSign&apos;s Status Code for this Inventor. (That will be used to map back to Signed flag) 
DocuSign events are send for all inventors on a Disclosure at the same time. Needing to ensure status code is mapped correctly for each.</description>
    <label>DocuSign Recipient StatusCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>