force-app/main/default/objects/DisclosureInventor__c/fields/FundingThroughDlc__c.field-meta.xml
<CustomField>
    <fullName>FundingThroughDlc__c</fullName>
    <label>6. Funding through CBA, ML, LL?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BitsAndAtoms</fullName>
                <label>Center for Bits and Atoms (CBA)</label>
            </value>
            <value>
                <fullName>MediaLab</fullName>
                <label>Media Lab</label>
            </value>
            <value>
                <fullName>LincolnLab</fullName>
                <label>Lincoln Lab</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>