force-app/main/default/objects/DisclosureInventor__c/fields/HHMI_At_Time_of_Invention__c.field-meta.xml
<CustomField>
    <fullName>HHMI_At_Time_of_Invention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HHMI affiliation during invention</label>
    <type>Checkbox</type>
</CustomField>