force-app/main/default/objects/DisclosureInventor__c/fields/HHMI_tenure_date_to__c.field-meta.xml
<CustomField>
    <fullName>HHMI_tenure_date_to__c</fullName>
    <label>HHMI Date of Tenure (to)</label>
    <type>Date</type>
</CustomField>