force-app/main/default/objects/DisclosureInventor__c/fields/Inventor_Added_to_DocuSign_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Inventor_Added_to_DocuSign_Envelope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to tell if this inventors details have been added to the DocuSign envelop yet or not
False:  not added
True: added 

This is set to true when inventor requests their signing URL for the first time.</description>
    <label>Inventor Added to DocuSign Envelope</label>
    <type>Checkbox</type>
</CustomField>