force-app/main/default/objects/DisclosureInventor__c/fields/Inventor_Name__c.field-meta.xml
<CustomField>
    <fullName>Inventor_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;, IF( ISBLANK( Contact__r.PreferredName__pc ), TRIM( Contact__r.FirstName + &apos; &apos; + Contact__r.MiddleName + &apos; &apos; + Contact__r.LastName ), TRIM( Contact__r.PreferredName__pc + &apos; &apos; +  Contact__r.LastName ) ), &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>