force-app/main/default/objects/DisclosureInventor__c/fields/IPIA_Latest_SignDate__c.field-meta.xml
<CustomField>
    <fullName>IPIA_Latest_SignDate__c</fullName>
    <formula>IF(ISNULL(IPIA_Record__r.SignDatetime__c),
  &apos;&apos;,

TEXT(MONTH(IPIA_Record__r.SignDatetime__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(IPIA_Record__r.SignDatetime__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(IPIA_Record__r.SignDatetime__c)) &amp; &apos; &apos; &amp; BLANKVALUE(IPIA_Record__r.IPIA_Type__r.Name, IPIA_Record__r.FormName__c) &amp;  (IF(IPIA_Record__r.IPIA_Type__r.Exemption__c, &apos; (Exemption)&apos;, &apos;&apos;)) &amp; (CASE(IPIA_Record__r.IPIA_Type__r.Status__c, &apos;Needs TLO Review&apos;, &apos; - Needs TLO Review&apos;, &apos;Legacy&apos;, &apos; - Legacy&apos;, &apos;&apos;))
)</formula>
    <label>IPIA</label>
    <type>Text</type>
</CustomField>