force-app/main/default/objects/DisclosureInventor__c/fields/IPIA_Record__c.field-meta.xml
<CustomField>
    <fullName>IPIA_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPIA</label>
    <referenceTo>IPIA_Record__c</referenceTo>
    <relationshipLabel>IPIAs</relationshipLabel>
    <relationshipName>IPIAs</relationshipName>
    <type>Lookup</type>
</CustomField>