force-app/main/default/objects/DisclosureInventor__c/fields/MitAtTimeOfInvention__c.field-meta.xml
<CustomField>
    <fullName>MitAtTimeOfInvention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At MIT at time of Invention</label>
    <type>Checkbox</type>
</CustomField>