force-app/main/default/objects/DisclosureInventor__c/fields/PartOfClass__c.field-meta.xml
<CustomField>
    <fullName>PartOfClass__c</fullName>
    <label>9. Conceived in MIT class?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>