force-app/main/default/objects/DisclosureInventor__c/fields/PartOfClassDetails__c.field-meta.xml
<CustomField>
    <fullName>PartOfClassDetails__c</fullName>
    <label>9a. MIT Class details</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>