force-app/main/default/objects/DisclosureInventor__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Contact__r.PersonMobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone</label>
    <type>Text</type>
</CustomField>