force-app/main/default/objects/DisclosureInventor__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <formula>Contact__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Email</label>
    <type>Text</type>
</CustomField>