force-app/main/default/objects/DisclosureInventor__c/fields/PrimaryInventor__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInventor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>