force-app/main/default/objects/DisclosureInventor__c/fields/Review_Draft_Watcher__c.field-meta.xml
<CustomField>
    <fullName>Review_Draft_Watcher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Draft Disclosure</label>
    <type>Checkbox</type>
</CustomField>