force-app/main/default/objects/DisclosureInventor__c/fields/SalaryWages__c.field-meta.xml
<CustomField>
    <fullName>SalaryWages__c</fullName>
    <label>1. Who pays your salary/wages?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIT</fullName>
            </value>
            <value>
                <fullName>Non-MIT</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>