force-app/main/default/objects/DisclosureInventor__c/fields/SalaryWagesDetails__c.field-meta.xml
<CustomField>
    <fullName>SalaryWagesDetails__c</fullName>
    <label>1a. Salary/Wages details</label>
    <type>TextArea</type>
</CustomField>