force-app/main/default/objects/DisclosureInventor__c/fields/Signed_Comment__c.field-meta.xml
<CustomField>
    <fullName>Signed_Comment__c</fullName>
    <description>Signed Comment -&gt; only used when Inventor Opt&apos;s out of Disclosure</description>
    <label>Signed Comment</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>