force-app/main/default/objects/DisclosureInventor__c/fields/Signed_Disclosure_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Disclosure_Date__c</fullName>
    <label>Signed Disclosure Date</label>
    <type>DateTime</type>
</CustomField>