force-app/main/default/objects/DisclosureInventor__c/fields/Signed_Status__c.field-meta.xml
<CustomField>
    <fullName>Signed_Status__c</fullName>
    <description>Status indication whether inventor has signed the Disclosure or not. Defaults to Pending</description>
    <label>Signed Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>