force-app/main/default/objects/DisclosureInventor__c/fields/Submitter_Marked_Inventor_As_HHMI__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Marked_Inventor_As_HHMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked as affiliated with HHMI</label>
    <type>Checkbox</type>
</CustomField>