force-app/main/default/objects/DisclosureInventor__c/fields/ThirdPartyMaterials__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyMaterials__c</fullName>
    <label>10. Other  materials or datasets?</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>