force-app/main/default/objects/DisclosureInventor__c/fields/TLO_Contact__c.field-meta.xml
<CustomField>
    <fullName>TLO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TLO Contact (Old)</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>Disclosure Inventors</relationshipLabel>
    <relationshipName>Inventors</relationshipName>
    <type>Lookup</type>
</CustomField>