force-app/main/default/objects/DisclosureInventor__c/fields/WorkDoneAtMIT__c.field-meta.xml
<CustomField>
    <fullName>WorkDoneAtMIT__c</fullName>
    <label>2. Relevant work done @ MIT?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>