force-app/main/default/objects/DisclosureInventor__c/fields/WorkDoneOutsideMIT__c.field-meta.xml
<CustomField>
    <fullName>WorkDoneOutsideMIT__c</fullName>
    <label>3. Relevant work @ other organization?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>