force-app/main/default/objects/DisclosureInventor__c/fields/WorkDoneOutsideMITDetails__c.field-meta.xml
<CustomField>
    <fullName>WorkDoneOutsideMITDetails__c</fullName>
    <label>3a. Other Org. details</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>